--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BinCardApp</string>
+    <string name="bin">Введите BIN</string>
+    <string name="search_history">История поиска</string>
+    <string name="information_search">Поиск</string>
 </resources>
